--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 }
 .w3-theme1 {
     color: #000 !important;
-    background-color: rgba(100, 245, 144, 0.904) !important;
+    background-color: #95c5f0 !important;
 }
 .w3-theme2 {
     color: #000 !important;
@@ -45,14 +45,26 @@ footer {
     margin-top: auto;
 }
 
+label {
+    text-align: left;
+    line-height: 24px;
+}
+
+  
+#lname, #fname {
+    height: 20px;
+    width: 150px
+}
+
 #foot-links {
     max-width: 40%;
 }
 
 #welcome {
-    padding-top: 10px;
-    padding-bottom: 10px;
+    margin:5px;
+    padding: 5px 85px 5px 85px;
     border-radius: 25px;
+    box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.5);
 }
 
 #logo {
@@ -71,7 +83,7 @@ footer {
 
 #first {
     width: 90%;
-    height: 90%;
+    height: 900px;
     margin: auto;
     padding: 5px;
 }
@@ -79,7 +91,6 @@ footer {
 #second {
     width: 75%;
     margin: auto;
-    height:100vh;
 }
 
 #date {
@@ -90,6 +101,43 @@ footer {
     color:dimgray;
     margin-top: 20px;
 }
+
+#compline_overlay {
+    position: fixed; /* Sit on top of the page content */
+    display: none; /* Hidden by default */
+    width: 100%; 
+    height: 100%; 
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.781); /* Black background with opacity */
+    z-index: 2; 
+    cursor: pointer; 
+}
+#bible_overlay {
+    position: fixed; /* Sit on top of the page content */
+    display: none;
+    width: 100%; 
+    height: 100%; 
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.781); /* Black background with opacity */
+    z-index: 2; 
+    cursor: pointer; /* Add a pointer on hover */
+}
+
+.text {
+    font-size: 1.5em;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: white;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+  }
 
 .flex-container {
     margin: 15px auto 15px auto;
@@ -103,10 +151,26 @@ footer {
     }
 }
 
+.overlay_img {
+    box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.5);
+    width: 300px;
+    height: 200px;
+    cursor: pointer;
+    margin:10px;
+}
+
+.contact_forms {
+    width: 50%;
+    margin: 10px;
+}
+
 @media (max-width: 800px) {
     #first {
         width:auto;
         margin:0px;
+    }
+    .text {
+        font-size: 1.2em;
     }
     .flex-container {
         flex-direction: row;
