--- a/styles.css
+++ b/styles.css
@@ -81,14 +81,13 @@ label {
     margin:5px;
 }
 
-#first {
+.first {
     width: 90%;
-    height: 900px;
     margin: auto;
     padding: 5px;
 }
 
-#second {
+.second {
     width: 75%;
     margin: auto;
 }
